// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp component tests should create GifExpertApp component 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</div>
`;

exports[`GifExpertApp component tests should first 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="Rick and Morty"
    key="Rick and Morty"
  />
  <GifGrid
    category="One Punch"
    key="One Punch"
  />
</div>
`;
